# nrf52840-rs

./: Cargo.toml  README.md
embassy-blinky/: Cargo.toml  Embed.toml
embassy-blinky/src/: main.rs
embassy-shtc3-beacon/embedded/: Cargo.toml  Embed.toml
embassy-shtc3-beacon/embedded/src/: main.rs
embassy-softdevice-advertise/: Cargo.toml
embassy-softdevice-advertise/embedded/: Cargo.toml
embassy-softdevice-advertise/embedded/.cargo/: config.toml
embassy-softdevice-advertise/embedded/src/: main.rs
nrf-rs-blink/: Cargo.toml
nrf-rs-blink/src/: main.rs
nrf-rs-blinky/: Cargo.toml
