[package]
name = "embassy-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]  }
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4.0"
embassy-nrf = { version = "0.3.1", features = ["nrf52840", "time-driver-rtc1", "time"] }
