[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4.0"
embassy-nrf = { version = "0.3.1", features = ["nrf52840", "time-driver-rtc1", "time"] }

# nrf pac dependency
# https://github.com/embassy-rs/nrf-softdevice/issues/291
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master", features = [ "critical-section-impl", "nrf52840", "s140", "ble-peripheral"] }

embedded-alloc = "0.6.0"
shtcx = "1.0.0"