[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread"]}
embassy-nrf = { version = "0.2.0", features = ["nrf52840" ]}
nrf-softdevice = { version = "0.1.0", features = ["critical-section-impl", "nrf52840", "s140", "ble-peripheral"] }
embedded-alloc = "0.6.0"
rtt-target = "0.6.1"